# chess

./: .dockerignore  .env.example  .gitignore  .gitmodules  BISHOP_PAIR_INVESTIGATION.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.lichess-bot  LICENSE  README.md  config.lichess-bot.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.lichess-bot.py  flamescope.json  justfile
.github/workflows/: test.yml
benches/: arrayvec_test.rs  benchmarks.rs
games/: 50_m_d_6_p.txt  game_10_quies_book_king_map_30_m_d_4_p.txt  game_2_quies_10_m_d_4_p.txt  game_2_quies_20_m_d_4_p.txt  game_2_quies_50_m_d_4_p.txt  game_3_quies_50_m_d_6_p.txt  game_4_quies_50_m_d_6_p.txt  game_6_quies_book_20_m_d_4_p.txt  game_7_quies_book_20_m_d_4_p.txt  game_8_quies_book_king_map_20_m_d_4_p.txt  game_9_quies_book_king_map_20_m_d_4_p.txt
scripts/: analyze_losses.py  pyproject.toml
src/: bitboard.rs  board.rs  book.rs  engine.rs  evaluate.rs  game.rs  lib.rs  main.rs  movegen.rs  movelist.rs  movepicker.rs  perft.rs  polyglot_keys.rs  search.rs  stockfish_tests.rs  tt.rs  types.rs  zobrist.rs
test_data/: stockfish_reference.json  test_positions.epd
tests/: uci_tests.rs
web/: index.html
web-app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web-app/src/: App.tsx  index.css  main.tsx
web-app/src/components/: ChessBoard.tsx  EngineStats.tsx  EvalBar.tsx  EvalChart.tsx  EvalDisplay.tsx  GameControls.tsx  MoveHistory.tsx  PromotionModal.tsx  StatusBar.tsx
web-app/src/lib/: api.ts  spectate-types.ts  types.ts  useChessGame.ts
web-app/src/pages/: Play.tsx  Spectate.tsx
web/assets/: index-BB1ZWVK4.css  index-BDJRKW05.css  index-BHltg-wP.js  index-BPA5jIOG.js  index-BV4BmXex.css  index-BXpbc_rB.js  index-BpzReAu-.js  index-CVL7Df3U.js  index-D6vCq3MZ.js  index-D7DbvelR.css  index-DSl0udBR.js  index-DWh1Z1Vg.css  index-DhykSmJM.css  index-Do-_2fS6.js  index-DpbRnG2G.css  index-DpucoACZ.js  index-Ds6FiNab.js
web/pieces/: LICENSE
(+2 files in other folders)
