[package]
name = "rust_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
itertools = "0.12.0"
once_cell = "1.18.0"
rand = "0.8.5"

[build]
# mangle using newer version of symbol mangling
rustflags = ["-C", "symbol-mangling-version=v0"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pretty_assertions = "1.4.0"

[[bench]]
name = "benchmarks"
harness = false

[profile.profiling]
# use release mode for benchmarks
inherits = "release"
strip = false
debug = true


[profile.release]
lto = true
codegen-units = 1
