[package]
name = "rust_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
itertools = "0.12.0"
once_cell = "1.18.0"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pretty_assertions = "1.4.0"

[[bin]]
name = "generate_stockfish_reference"
path = "src/bin/generate_stockfish_reference.rs"

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[[bin]]
name = "benchmark_timing"
path = "src/bin/benchmark_timing.rs"

[[bin]]
name = "benchmark_tracker"
path = "src/bin/benchmark_tracker.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.profiling]
# use release mode for benchmarks
inherits = "release"
strip = false
debug = true


[profile.release]
lto = true
codegen-units = 1
